# search-router

./: Cargo.toml  LICENSE  README.md  install.sh  search-router.service
src/: handler.rs  main.rs  preset.rs
